# internal/models/user.go
@@ -3,40 +3,50 @@ package models
 import (
 	"errors"
 	"net/http"
+	"time"
 
 	"github.com/gin-gonic/gin"
-	"github.com/jinzhu/gorm"
+	"github.com/google/uuid"
+	"gorm.io/gorm"
 
-	"github.com/XanderMoroz/BookStore/utils/token"
+	"github.com/XanderMoroz/BookStore/utils"
 )
 
 var DB *gorm.DB
 
 // type User struct {
 // 	gorm.Model
-// 	ID        uuid.UUID `gorm:"type:uuid"`
-// 	Username  string    `gorm:"not null"`
-// 	Email     string    `gorm:"uniqueIndex"`
-// 	Password  []byte    `json:"-"` // contain the hashed password.
-// 	CreatedAt time.Time `gorm:"autoCreateTime"`
-// 	UpdatedAt time.Time `gorm:"autoUpdateTime"`
-// 	// DeletedAt gorm.DeletedAt
-// 	// Articles  []Article `gorm:"foreignKey:UserID"`
+// 	Username string `gorm:"size:255;not null;unique" json:"username"`
+// 	Password string `gorm:"size:255;not null;" json:"password"`
 // }
 
 type User struct {
 	gorm.Model
-	Username string `gorm:"size:255;not null;unique" json:"username"`
-	Password string `gorm:"size:255;not null;" json:"password"`
+	ID        uuid.UUID `gorm:"type:char(36);primary_key"` //`gorm:"type:uuid"`
+	Name      string    `gorm:"not null"`
+	Username  string    `gorm:"type:char(128);uniqueIndex"`
+	Password  []byte    `json:"-"` // contain the hashed password.
+	CreatedAt time.Time `gorm:"autoCreateTime"`
+	UpdatedAt time.Time `gorm:"autoUpdateTime"`
+	DeletedAt gorm.DeletedAt
 }
 
-func (u User) PrepareGive() {
-
+type UserResponse struct {
+	ID       uint   `json:"id"`
+	Username string `json:"username"`
+	Password string `json:"password"`
 }
 
+// @Summary		get current user
+// @Description Get token from users cookee
+// @Tags 		Authentication
+// @ID			get-current-user
+// @Produce		json
+// @Success		200		{object}	UserResponse
+// @Router		/api/admin/user [get]
 func CurrentUser(c *gin.Context) {
 
-	user_id, err := token.ExtractTokenID(c)
+	user_id, err := utils.ExtractTokenID(c)
 
 	if err != nil {
 		c.JSON(http.StatusBadRequest, gin.H{"error": err.Error()})
@@ -61,8 +71,12 @@ func GetUserByID(uid uint) (User, error) {
 		return u, errors.New("User not found!")
 	}
 
-	u.PrepareGive()
+	// u.PrepareGive()
 
 	return u, nil
+
+}
+
+func (u User) PrepareGive() {
 
 }
